downgraded to java 8 from java 11 for reasons of backwards compatibility